--- a/biler.html
+++ b/biler.html
@@ -17,261 +17,169 @@
     <section class="background">
         <header></header>
     </section>
-
     <main>
-        <div class="container">
-			<section class="boxCars item-1">
-                <table>
-                    <tr>
-                        <th class="headerCars">AUDI MODEL</th>
-                        <th class="right pris" >4.500 pr. md.</th>
-                    </tr>
-                    <tr>
-                        <td>Årstal</td>
-                        <td class="right"><span class="roboto">2013</span></td>
-                    </tr>
-                    <tr>
-                        <td>KM kørt</td>
-                        <td class="right"><span class="roboto">45</span> KM</td>
-                    </tr>
-                    <tr>
-                        <td>Brændstof</td>
-                        <td class="right">Benzin</td>
-                    </tr>
-                </table>
-			</section>
-
-            <section class="boxCars item-2">
-                <table>
-                    <tr>
-                        <th class="headerCars">AUDI MODEL</th>
-                        <th class="right pris" >4.500 pr. md.</th>
-                    </tr>
-                    <tr>
-                        <td>Årstal</td>
-                        <td class="right"><span class="roboto">2013</span></td>
-                    </tr>
-                    <tr>
-                        <td>KM kørt</td>
-                        <td class="right"><span class="roboto">45</span> KM</td>
-                    </tr>
-                    <tr>
-                        <td>Brændstof</td>
-                        <td class="right">Benzin</td>
-                    </tr>
-                </table>
-			</section>
-
-            <section class="boxCars item-3">
-                <table>
-                    <tr>
-                        <th class="headerCars">AUDI MODEL</th>
-                        <th class="right pris" >4.500 pr. md.</th>
-                    </tr>
-                    <tr>
-                        <td>Årstal</td>
-                        <td class="right"><span class="roboto">2013</span></td>
-                    </tr>
-                    <tr>
-                        <td>KM kørt</td>
-                        <td class="right"><span class="roboto">45</span> KM</td>
-                    </tr>
-                    <tr>
-                        <td>Brændstof</td>
-                        <td class="right">Benzin</td>
-                    </tr>
-                </table>
-			</section>
-
-            <section class="boxCars item-4">
-                <table>
-                    <tr>
-                        <th class="headerCars">AUDI MODEL</th>
-                        <th class="right pris" >4.500 pr. md.</th>
-                    </tr>
-                    <tr>
-                        <td>Årstal</td>
-                        <td class="right"><span class="roboto">2013</span></td>
-                    </tr>
-                    <tr>
-                        <td>KM kørt</td>
-                        <td class="right"><span class="roboto">45</span> KM</td>
-                    </tr>
-                    <tr>
-                        <td>Brændstof</td>
-                        <td class="right">Benzin</td>
-                    </tr>
-                </table>
-			</section>
-
-            <section class="boxCars item-5">
-                <table>
-                    <tr>
-                        <th class="headerCars">AUDI MODEL</th>
-                        <th class="right pris" >4.500 pr. md.</th>
-                    </tr>
-                    <tr>
-                        <td>Årstal</td>
-                        <td class="right"><span class="roboto">2013</span></td>
-                    </tr>
-                    <tr>
-                        <td>KM kørt</td>
-                        <td class="right"><span class="roboto">45</span> KM</td>
-                    </tr>
-                    <tr>
-                        <td>Brændstof</td>
-                        <td class="right">Benzin</td>
-                    </tr>
-                </table>
-			</section>
-
-            <section class="boxCars item-6">
-                <table>
-                    <tr>
-                        <th class="headerCars">AUDI MODEL</th>
-                        <th class="right pris" >4.500 pr. md.</th>
-                    </tr>
-                    <tr>
-                        <td>Årstal</td>
-                        <td class="right"><span class="roboto">2013</span></td>
-                    </tr>
-                    <tr>
-                        <td>KM kørt</td>
-                        <td class="right"><span class="roboto">45</span> KM</td>
-                    </tr>
-                    <tr>
-                        <td>Brændstof</td>
-                        <td class="right">Benzin</td>
-                    </tr>
-                </table>
-			</section>
-
-            <section class="boxCars item-7">
-                <table>
-                    <tr>
-                        <th class="headerCars">AUDI MODEL</th>
-                        <th class="right pris" >4.500 pr. md.</th>
-                    </tr>
-                    <tr>
-                        <td>Årstal</td>
-                        <td class="right"><span class="roboto">2013</span></td>
-                    </tr>
-                    <tr>
-                        <td>KM kørt</td>
-                        <td class="right"><span class="roboto">45</span> KM</td>
-                    </tr>
-                    <tr>
-                        <td>Brændstof</td>
-                        <td class="right">Benzin</td>
-                    </tr>
-                </table>
-			</section>
-
-            <section class="boxCars item-8">
-                <table>
-                    <tr>
-                        <th class="headerCars">AUDI MODEL</th>
-                        <th class="right pris" >4.500 pr. md.</th>
-                    </tr>
-                    <tr>
-                        <td>Årstal</td>
-                        <td class="right"><span class="roboto">2013</span></td>
-                    </tr>
-                    <tr>
-                        <td>KM kørt</td>
-                        <td class="right"><span class="roboto">45</span> KM</td>
-                    </tr>
-                    <tr>
-                        <td>Brændstof</td>
-                        <td class="right">Benzin</td>
-                    </tr>
-                </table>
-			</section>
-
-            <section class="boxCars item-9">
-                <table>
-                    <tr>
-                        <th class="headerCars">AUDI MODEL</th>
-                        <th class="right pris" >4.500 pr. md.</th>
-                    </tr>
-                    <tr>
-                        <td>Årstal</td>
-                        <td class="right"><span class="roboto">2013</span></td>
-                    </tr>
-                    <tr>
-                        <td>KM kørt</td>
-                        <td class="right"><span class="roboto">45</span> KM</td>
-                    </tr>
-                    <tr>
-                        <td>Brændstof</td>
-                        <td class="right">Benzin</td>
-                    </tr>
-                </table>
-			</section>
-
-            <section class="boxCars item-10">
-                <table>
-                    <tr>
-                        <th class="headerCars">AUDI MODEL</th>
-                        <th class="right pris" >4.500 pr. md.</th>
-                    </tr>
-                    <tr>
-                        <td>Årstal</td>
-                        <td class="right"><span class="roboto">2013</span></td>
-                    </tr>
-                    <tr>
-                        <td>KM kørt</td>
-                        <td class="right"><span class="roboto">45</span> KM</td>
-                    </tr>
-                    <tr>
-                        <td>Brændstof</td>
-                        <td class="right">Benzin</td>
-                    </tr>
-                </table>
-			</section>
-
-            <section class="boxCars item-11">
-                <table>
-                    <tr>
-                        <th class="headerCars">AUDI MODEL</th>
-                        <th class="right pris" >4.500 pr. md.</th>
-                    </tr>
-                    <tr>
-                        <td>Årstal</td>
-                        <td class="right"><span class="roboto">2013</span></td>
-                    </tr>
-                    <tr>
-                        <td>KM kørt</td>
-                        <td class="right"><span class="roboto">45</span> KM</td>
-                    </tr>
-                    <tr>
-                        <td>Brændstof</td>
-                        <td class="right">Benzin</td>
-                    </tr>
-                </table>
-			</section>
-
-            <section class="boxCars item-12">
-                <table>
-                    <tr>
-                        <th class="headerCars">AUDI MODEL</th>
-                        <th class="right pris" >4.500 pr. md.</th>
-                    </tr>
-                    <tr>
-                        <td>Årstal</td>
-                        <td class="right"><span class="roboto">2013</span></td>
-                    </tr>
-                    <tr>
-                        <td>KM kørt</td>
-                        <td class="right"><span class="roboto">45</span> KM</td>
-                    </tr>
-                    <tr>
-                        <td>Brændstof</td>
-                        <td class="right">Benzin</td>
-                    </tr>
-                </table>
-			</section> 
-        </div>
+        <section class="options">
+            <select name="cars" id="cars">
+                <option value="">Mærke</option>
+                <option value="volvo">Volvo</option>
+                <option value="toyota">Toyata</option>
+                <option value="saab">Saab</option>
+                <option value="mercedes">Mercedes</option>
+                <option value="audi">Audi</option>
+            </select>
+        </section>
+        <section class="carGrid">
+            <section class="carBox">
+                <img src="assets/images/testbil.jpg" alt="">
+                <article class="details">
+                    <section>
+                        <h2 class="headerCars">AUDI MODEL</h2>
+                        <p class="pris robotolight">4.500 pr. md.</p>
+                    </section>
+                    <section>
+                        <section class="icondetail">
+                            <img src="assets/images/history.png" alt="">
+                            <p>Årstal</p>
+                        </section>
+                        <p class="robotolight">2013</p>
+                    </section>
+                    <section>
+                        <section class="icondetail">
+                            <img src="assets/images/road.png" alt="">
+                            <p>KM kørt</p>
+                        </section>
+                        <p class="robotolight">45</p>
+                    </section>
+                    <section>
+                        <section class="icondetail">
+                            <img src="assets/images/gas-station.png" alt="">
+                            <p>Brændstof</p>
+                        </section>
+                        <p>Benzin</p>
+                    </section>
+                </article>
+            </section>
+            <section class="carBox">
+                <img src="assets/images/testbil.jpg" alt="">
+                <article class="details">
+                    <section>
+                        <h2 class="headerCars">AUDI MODEL</h2>
+                        <p class="pris robotolight">4.500 pr. md.</p>
+                    </section>
+                    <section>
+                        <section class="icondetail">
+                            <img src="assets/images/history.png" alt="">
+                            <p>Årstal</p>
+                        </section>
+                        <p class="robotolight">2013</p>
+                    </section>
+                    <section>
+                        <section class="icondetail">
+                            <img src="assets/images/road.png" alt="">
+                            <p>KM kørt</p>
+                        </section>
+                        <p class="robotolight">45</p>
+                    </section>
+                    <section>
+                        <section class="icondetail">
+                            <img src="assets/images/gas-station.png" alt="">
+                            <p>Brændstof</p>
+                        </section>
+                        <p>Benzin</p>
+                    </section>
+                </article>
+            </section>
+            <section class="carBox">
+                <img src="assets/images/testbil.jpg" alt="">
+                <article class="details">
+                    <section>
+                        <h2>AUDI MODEL</h2>
+                        <p class="pris robotolight">4.500 pr. md.</p>
+                    </section>
+                    <section>
+                        <section class="icondetail">
+                            <img src="assets/images/history.png" alt="">
+                            <p>Årstal</p>
+                        </section>
+                        <p class="robotolight">2013</p>
+                    </section>
+                    <section>
+                        <section class="icondetail">
+                            <img src="assets/images/road.png" alt="">
+                            <p>KM kørt</p>
+                        </section>
+                        <p class="robotolight">45</p>
+                    </section>
+                    <section>
+                        <section class="icondetail">
+                            <img src="assets/images/gas-station.png" alt="">
+                            <p>Brændstof</p>
+                        </section>
+                        <p>Benzin</p>
+                    </section>
+                </article>
+            </section>
+            <section class="carBox">
+                <img src="assets/images/testbil.jpg" alt="">
+                <article class="details">
+                    <section>
+                        <h2>AUDI MODEL</h2>
+                        <p class="pris robotolight">4.500 pr. md.</p>
+                    </section>
+                    <section>
+                        <section class="icondetail">
+                            <img src="assets/images/history.png" alt="">
+                            <p>Årstal</p>
+                        </section>
+                        <p class="robotolight">2013</p>
+                    </section>
+                    <section>
+                        <section class="icondetail">
+                            <img src="assets/images/road.png" alt="">
+                            <p>KM kørt</p>
+                        </section>
+                        <p class="robotolight">45</p>
+                    </section>
+                    <section>
+                        <section class="icondetail">
+                            <img src="assets/images/gas-station.png" alt="">
+                            <p>Brændstof</p>
+                        </section>
+                        <p>Benzin</p>
+                    </section>
+                </article>
+            </section>
+            <section class="carBox">
+                <img src="assets/images/testbil.jpg" alt="">
+                <article class="details">
+                    <section>
+                        <h2>AUDI MODEL</h2>
+                        <p class="pris robotolight">4.500 pr. md.</p>
+                    </section>
+                    <section>
+                        <section class="icondetail">
+                            <img src="assets/images/history.png" alt="">
+                            <p>Årstal</p>
+                        </section>
+                        <p class="robotolight">2013</p>
+                    </section>
+                    <section>
+                        <section class="icondetail">
+                            <img src="assets/images/road.png" alt="">
+                            <p>KM kørt</p>
+                        </section>
+                        <p class="robotolight">45</p>
+                    </section>
+                    <section>
+                        <section class="icondetail">
+                            <img src="assets/images/gas-station.png" alt="">
+                            <p>Brændstof</p>
+                        </section>
+                        <p>Benzin</p>
+                    </section>
+                </article>
+            </section>
+        </section>
     </main>
 
     <footer></footer>
