tekst på alle sider tilføjet

--- a/leasing.html
+++ b/leasing.html
@@ -91,35 +91,39 @@
                 <article>
                     <h1>Erhvervsleasing</h1>
                     <p>
-                        Lad os hjælpe dig med at udregne om leasing af din næste bil er
-                        en god forretning for dig. Privatleasing kan bruges uanset om bilen
-                        alene skal bruges til privatkørsel eller om det også er til
-                        erhvervskørsel du skal bruge bilen.
-                        Når du laver en privat leasing aftale med os, har vi ét enkelt krav til
-                        dig, du skal finde den bil du gerne vil køre i, resten ordner vi.
+                        Hos Sparta Biler Aps kan du finde flexleasing erhverv. Ønsker du, at
+                        dine medarbejdere ska ltage sig godt ud, når de er på arbejder,
+                        kan du lade dem repræsentere dig og din virksomhed I ekslusive
+                        bilmærker. Du kan finde vores showroom I Søborg, hvorfra vi
+                        betjener kunder fra København og resten af Sjælland.
                     </p>
-                    <h2>Privatleasing af alle bilmærker</h2>
+                    <h2>
+                        Leasing af biler som BMW, Mercedes og
+                        Porsche til erhverv
+                    </h2>
                     <p>
-                        De biler vi eksempelvis kan tilbyde dig til privatleasing fremstår i
-                        en flot stand. De er altid med få kilometer på sig, og med masser
-                        af udstyr. Da vi selv sørger for import af bilerne, sparer du mange
-                        penge, og det vil være meget attraktivt for dig at lave en privat
-                        leasing.
+                        Hos Sparta Biler ApS stræber vi efter høj kvalitet og stor
+                        kundetilfredshed. Derfor er vi glade for at kunne tilbyde dit firma
+                        attraktive løsninger inden for flexleasing og leasing af biler, og vi
+                        skræddersyr gerne den helt rigtige løsning til dig.
                     </p>
                     <p>
-                        Når du laver en privat leasing med os kan perioden variere fra
-                        12-48 måneder. Længden af aftalen bestemmer du selv, men det
-                        er klart, at jo længere tid privat leasing aftalen løber, desto
-                        billigere sidder du for om måneden.
+                        Vi har erfaring med at finde biler, der matcher vores kunders
+                        behov. Vi har derfor et bredt udvalg af eksklusive bilmærker såsom
+                        BMW, Mercedes og Porsche. Ønsker du, at dine ansatte skal
+                        repræsentere din virksomhed med stil, kan du blandt andet vælge
+                        mellem disse mærker.
                     </p>
-                    <h2>En typisk privatleasing</h2>
+                    <h2>Fordele ved erhvervsleasing</h2>
                     <p>
-                        En normal privatleasing aftale bygger på en model, hvor
-                        leasingselskabet tager bilen tilbage efter endt leasing. Derved
-                        påtager leasingselskabet sig også risikoen. Leasingtageren
-                        forpligter sig til at levere bilen tilbage i god stand - dvs. uden
-                        buler, ridser og andre brugsskader - samt at overholde den
-                        kilometerbegrænsning, der er aftalt i leasingperioden.
+                        Erhvervsleasing af biler kan være en oplagt mulighed for din
+                        virksomhed, hvis du ønsker billig finansiering af biler og ikke
+                        ønsker at fastlåse din virksomheds kapital.                         
+                    </p>
+                    <p>
+                        Fordelene ved erhvervsleasing er i vid udstrækning de samme
+                        som ved leasing til private, men det gør dem kun endnu mere
+                        relevante for din virksomhed.
                     </p>
                 </article>
                 <article>
@@ -129,17 +133,23 @@
                         </svg>
                     </section>
                     <section>
-                        <h2>Privatleasing af drømmebilen</h2>
-                        <p>
-                            Du har nu mulighed for at lave en privatleasing aftale på den
-                            bil du altid har drømt om. Vi alle går vel rundt med lidt benzin i
-                            blodet, og synes det er en fornøjelse at sætte sig ind i en
-                            lækker bil, med masser af komfort og udstyr.
-                            Vi har mange års erfaring med erhvervs leasing og
-                            privatleasing, og ingen opgaver er for store til os. Vi skaffer
-                            bilen på kort tid, efter du har besluttet dig, og vi levere den til
-                            dig med plader etc.
-                        </p>
+                        <h2>Oversigt over fordele ved erhvervsleasing</h2>
+                        <ul>
+                            <li>
+                                Mindre kapitalbinding
+                            </li>
+                            <li>
+                                Fleksibilitet i forhold til at skifte biler afhængigt af behov
+                            </li>
+                            <li>
+                                Større afsætningsmuligheder, da bilen sælges uden afgift
+                                med hele verden som købere
+                            </li>
+                            <li>
+                                Billigere forsikring, da bilerne kun forsikres for værdien
+                                uden afgift
+                            </li>
+                        </ul>
                     </section> 
                 </article>
             </section>
@@ -154,35 +164,69 @@
                 <article>
                     <h1>Splitleasing</h1>
                     <p>
-                        Lad os hjælpe dig med at udregne om leasing af din næste bil er
-                        en god forretning for dig. Privatleasing kan bruges uanset om bilen
-                        alene skal bruges til privatkørsel eller om det også er til
-                        erhvervskørsel du skal bruge bilen.
-                        Når du laver en privat leasing aftale med os, har vi ét enkelt krav til
-                        dig, du skal finde den bil du gerne vil køre i, resten ordner vi.
-                    </p>
-                    <h2>Privatleasing af alle bilmærker</h2>
-                    <p>
-                        De biler vi eksempelvis kan tilbyde dig til privatleasing fremstår i
-                        en flot stand. De er altid med få kilometer på sig, og med masser
-                        af udstyr. Da vi selv sørger for import af bilerne, sparer du mange
-                        penge, og det vil være meget attraktivt for dig at lave en privat
-                        leasing.
+                        Splitleasing-modellen gør det nemmere, billigere og sjovere at
+                        køre i firmabil. Splitleasing betyder, at man laver 2 kontrakter, og
+                        samtidig deler udgifterne mellem dig som privatperson og
+                        virksomheden. Dette betyder samtidig, at arbejdsgiveren samt
+                        arbejdstageren vil modtage en månedlig faktura, i forhold til den
+                        aktuelle anvendelse af bilen i den forgangne måned. Der bliver
+                        lavet to ens leasingkontrakter, henholdsvis en kontrakt til
+                        arbejdstager samt en kontrakt til arbejdsgiver.
                     </p>
                     <p>
-                        Når du laver en privat leasing med os kan perioden variere fra
-                        12-48 måneder. Længden af aftalen bestemmer du selv, men det
-                        er klart, at jo længere tid privat leasing aftalen løber, desto
-                        billigere sidder du for om måneden.
+                        Splitleasing giver dig dermed mulighed for, at man ikke længere
+                        skal lade firmabilen stå på arbejdspladsen, når arbejdsdagen er
+                        slut. Man kan køre videre i den privat, blot der føres
+                        kilometerregnskab, og man bliver ikke beskattet af det. Sådan en
+                        aftale indebærer, at arbejdsgiver og medarbejder kan dele
+                        udgifterne af bilen. Det vil sige, at de splitter udgifterne. På denne
+                        måde opnås der flere fordele, og resultatet er i sidste ende:
                     </p>
-                    <h2>En typisk privatleasing</h2>
+                    <ul>
+                        <li> 
+                            Med splitleasing kan man også køre privat i den kommende
+                            firmabil.
+                        </li>
+                        <li>
+                            Ved splitleasing vil man være i stand til at spare skatten af en ny
+                            firmabil.
+                        </li>
+                    </ul>
                     <p>
-                        En normal privatleasing aftale bygger på en model, hvor
-                        leasingselskabet tager bilen tilbage efter endt leasing. Derved
-                        påtager leasingselskabet sig også risikoen. Leasingtageren
-                        forpligter sig til at levere bilen tilbage i god stand - dvs. uden
-                        buler, ridser og andre brugsskader - samt at overholde den
-                        kilometerbegrænsning, der er aftalt i leasingperioden.
+                        Samtidig med at samtlige driftsomkostninger vil blive delt imellem
+                        arbejdstagers CPR nummer og arbejdsgivers CVR nummer -
+                        dermed kan firmaet spare en betydelig del af udgifterne til en
+                        firmabil. Dette skyldes imidlertid, at alle udgifterne ved splitleasing
+                        såsom førstegangsydelser, leasingydelser, brændstof, forsikringer,
+                        grøn ejerafgift m.m. vil blive delt imellem leasingtagerne.
+                    </p>
+                    <h2>
+                        Hvad splitleasing af din drømmebil kan betyde for dig
+                    </h2>
+                    <p>
+                        Vælger du at splitlease din næste bil, så vil det betyde, at
+                        virksomheden du indgår en aftale med om splitleasing af din
+                        næste bil hos Importbilen, samlet set får færre omkostninger,
+                        ligesom du som privatperson slipper for beskatning af firmabil.
+                    </p>
+                    <h2>
+                        Store økonomiske fordele
+                    </h2>
+                    <p>
+                        Forhold som virksomhedens og den ansattes økonomiske ønsker
+                        og forhold, er naturligvis med til at bestemme hvilken ordning der
+                        er den bedste i det enkelte tilfælde. Men helt generelt kan vi sige,
+                        at har du et kørselsmønster med flere erhvervsmæssige kilometer
+                        end private, så er splitleasing af din næste bil oftest en bedre
+                        løsning.
+                    </p>
+                    <p>
+                        Fordelene bliver naturligvis også større jo større
+                        beskatningsgrundlaget på bilen er samt jo flere kilometer du kører
+                        til erhvervsmæssige formål. Vi vil gerne hjælpe dig med at stille
+                        regnestykket op ud fra din specifikke situation, således du kan
+                        tage beslutning om splitleasing af din næste bil på det rigtige
+                        grundlag.
                     </p>
                 </article>
                 <article>
@@ -192,16 +236,36 @@
                         </svg>
                     </section>
                     <section>
-                        <h2>Privatleasing af drømmebilen</h2>
+                        <h2>
+                            Ved splitleasing er der krav til
+                            kørselsregnskab fra SKAT
+                        </h2>
                         <p>
-                            Du har nu mulighed for at lave en privatleasing aftale på den
-                            bil du altid har drømt om. Vi alle går vel rundt med lidt benzin i
-                            blodet, og synes det er en fornøjelse at sætte sig ind i en
-                            lækker bil, med masser af komfort og udstyr.
-                            Vi har mange års erfaring med erhvervs leasing og
-                            privatleasing, og ingen opgaver er for store til os. Vi skaffer
-                            bilen på kort tid, efter du har besluttet dig, og vi levere den til
-                            dig med plader etc.
+                            Mange tror, at køreregnskabet ved splitleasing indebærer, at
+                            man skal sidde i garagen en halv time efter for at føre
+                            regnskab. Dog ikke. Det fungere således, at man installere
+                            en GPS på sin bil, som automatisk tæller de kilometer du
+                            kører. Dette er også et krav ved splitleasing. Det er samtidig
+                            også et krav, at man gør brug af en elektronisk kørebog,
+                            som hjælper med at registrere de kørte kilometer korrekt i
+                            regnskabet.
+                        </p>
+                        <p>
+                            Alt det ovennævnte sker automatisk, hvilket vil sige, at det
+                            ikke er noget du skal bruge din tid på. Vil du gerne læse
+                            mere om de forskellige konkrete krav og spørgsmål til
+                            splitleasing? Så kan du læse det her.
+                        </p>
+                        <h2>
+                            Stor erfaring med splitleasing af alle bilmærker
+                        </h2>
+                        <p>
+                            Hos Sparta Biler ApS vælger du en professionel
+                            samarbejdspartner, der har stor erfaring med splitleasing af alle
+                            bilmærker. Vores kæmpe netværk gør, at vi altid er i stand til at
+                            finde den rette bil til dig med de rigtige specifikationer. Når du
+                            laver en aftale om splitleasing af din drømmebil gennem os får du
+                            det som du vil have det.
                         </p>
                     </section> 
                 </article>
