car details updated

--- a/bil.html
+++ b/bil.html
@@ -24,44 +24,55 @@
         <section class="grid">
             <img src="assets/images/Andrew-Garfield-Variety-Cover-Story-2-16x9-1.jpeg" alt="">
             <article>
-                <h4>Månedlig ydelse</h4>
-                <h2 class="bold"><span class="robotobold">4.500</span> DKK pr. md.</h2>
-                <h5>Andre detaljer</h5>
                 <article class="details">
-                    <section>
-                        <p>Ansvars- og kaskoforsikring</p>
-                        <p>Inkluderet</p>
+                    <h4>Detaljer</h4>
+                    <section class="icondetail">
+                        <section>
+                            <img src="assets/images/history.png" alt="">
+                            <p>Årgang <span class="robotolight">2016</span></p>
+                        </section>
+                        <section>
+                            <img src="assets/images/road.png" alt="">
+                            <p><span class="robotolight">159.000</span> km</p>
+                        </section>
+                        <section>
+                            <img src="assets/images/gas-station.png" alt="">
+                            <p>Benzin</p>
+                        </section>
                     </section>
-                    <hr>
-                    <section>
-                        <p>Service</p>
-                        <p>Inkluderet</p>
-                    </section>
-                    <hr>
-                    <section>
-                        <p>Metallak</p>
-                        <p>Inkluderet</p>
-                    </section>
-                    <hr>
-                    <section>
-                        <p>Afleveringsforsikring</p>
-                        <p>Inkluderet</p>
-                    </section>
-                    <hr>
+                    <h4>Flexleasing Privat - 12 måneder</h4>
                     <section>
                         <p>Udbetaling</p>
-                        <p><span class="robotolight">5000</span> DKK</p>
+                        <p><span class="robotolight">54.900</span> DKK inkl. moms</p>
                     </section>
                     <hr>
                     <section>
-                        <p>Tilbageleveringsgebyr</p>
-                        <p><span class="robotolight">600</span> DKK</p>
+                        <p>Månedlig ydelse</p>
+                        <p><span class="robotolight">2920</span> DKK inkl. moms</p>
                     </section>
                     <hr>
                     <section>
-                        <p>Halvårlig grøn ejerafgift</p>
-                        <p><span class="robotolight">300</span> DKK</p>
+                        <p>Restværdi</p>
+                        <p><span class="robotolight">177.000</span> DKK ekskl. moms</p>
                     </section>
+                    <hr>
+                    <h4>Flexleasing Erhverv - 12 måneder</h4>
+                    <section>
+                        <p>Udbetaling</p>
+                        <p><span class="robotolight">43.920</span> DKK ekskl. moms</p>
+                    </section>
+                    <hr>
+                    <section>
+                        <p>Månedlig ydelse</p>
+                        <p><span class="robotolight">2336</span> DKK ekskl. moms</p>
+                    </section>
+                    <hr>
+                    <section>
+                        <p>Restværdi</p>
+                        <p><span class="robotolight">177.000</span> DKK ekskl. moms</p>
+                    </section>
+                    <hr>
+                    
                     <a href="kontakt.html">
                         <button class="bold">
                             Kontakt os, og modtag et uforpligtende tilbud
@@ -70,33 +81,24 @@
                 </article>
             </article>
             <article>
-                <p>Vi har fundet denne vildt flotte Jeep compas hos vores samarbejdspartner i Tyskland. Bilen er proppet med udstyr lige fra M pakke udenvendigt til Harman Kardon anlæg og Head-Up display indevendigt. BMW's nyeste opdateret Række 6 diesel med 320 hk, der accelererer bilen fra 0-100 på 5.2 sek!</p>
-                <p>Denne bil kan leases i 12, 24 eller 36 måneder, den kan erhvervsleases, splitleases eller sæsonleases, kontakt os for en skræddersyet løsning der passer til dine behov.</p>
-                <p>mere info</p>
-                <p>mere info</p>
-                <p>mere info</p>
+                <p>Vi har denne direktionsvogn på lager til omgående levering, endda til en super skarp pris.</p>
+                <p>Bilen står utroligt flot og venter på sin nye ejer, skal det være dig?</p>
+                <article class="grey">
+                    <p>Ved kreditvurdering skal der fremvises 3 seneste lønsedler, årsopgørelse og kopi af kørekort samt sygesikring.</p>
+                    <p>En forudsætning for etablering af leasingaftalen er en positiv kreditvurdering.</p>
+                    <p>Tilbuddene er estimater, og det endelige tilbud kan først afgives, når man som kunde er blevet godkendt.</p>
+                </article>
             </article>
             <article class="extras">
-                <h2>Udstyr</h2>
+                <h2>Hos Sparta Biler tilbyder vi altid:</h2>
                 <ul>
-                    <li>Parkeringsensor for og bag</li>
-                    <li>360 grader bakkamera</li>
-                    <li>Adaptive LED laser lygter</li>
-                    <li>4-zone Klima</li>
-                    <li>Regnsensor</li>
-                    <li>Harman Kardon anlæg</li>
-                    <li>Head-Up display</li>
-                    <li>Adaptiv fartpilot</li>
-                    <li>Adaptiv luftundervogn Softclose</li>
-                    <li>Elektrisk bagklap</li>
-                    <li>Fuld elektriske lædersæder m. Massage</li>
-                    <li>Wifi - Internet hotspot</li>
+                    <li>Garantiforsikring. Ingen uforudsete regninger</li>
+                    <li>Fri km</li>
+                    <li>Forsikring (Min. 25 år) </li>
+                    <li>Hjælp til videresalg af bilen efter endt leasing</li>
+                    <li>Klargøring af din bil</li>
+                    <li>Altid realistisk restværdi</li>
                 </ul>
-            </article>
-            <article class="grey">
-                <p>Ved kreditvurdering skal der fremvises 3 seneste lønsedler, årsopgørelse og kopi af kørekort samt sygesikring.</p>
-                <p>En forudsætning for etablering af leasingaftalen er en positiv kreditvurdering.</p>
-                <p>Tilbuddene er estimater, og det endelige tilbud kan først afgives, når man som kunde er blevet godkendt.</p>
             </article>
         </section>
     </main>
